turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:63: error: not found: value RIT
  rule = Array( Array( Array(1,RIT,0), Array(1, RIGHT, 0) ) );
                               ^